--- a/contact.html
+++ b/contact.html
@@ -29,9 +29,9 @@
         <nav class="navbar row">
           <div class="navbar-header">
             <a class="navbar-brand" href="index.html"
-              ><img tabindex="0"
+              ><img tabindex="0" role="link"
                 src="img/la-chouette-agence.png"
-                alt="La chouette agence"
+                alt="La chouette agencet"
                 height="40"
             /></a>
             <button aria-expanded="false" tabindex="0"
@@ -41,7 +41,7 @@
               data-toggle="collapse"
               data-target=".navbar-1"
             >
-              <span tabindex="0" class="sr-only">Toggle navigation</span
+              <span tabindex="0" class="sr-only">navigation</span
               ><span tabindex="0" class="icon-bar"></span><span tabindex="0" class="icon-bar"></span
               ><span tabindex="0" class="icon-bar"></span>
             </button>
@@ -78,10 +78,10 @@
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-12">
-              <h1 class="text-center hero-bloc-text tc-white">
+              <h1 tabindex="0" class="text-center hero-bloc-text tc-white">
                 Parlons web design !
               </h1>
-              <p class="text-center mg-lg tc-white tight-width-whitespace">
+              <p tabindex="0" class="text-center mg-lg tc-white tight-width-whitespace">
                 Nous sommes ravis que vous souhaitiez collaborer avec notre
                 agence.<br />
                 Parlez-nous de votre projet en complétant le formulaire
@@ -104,12 +104,12 @@
               >
                 <div class="form-group">
                   <label> Nom </label>
-                  <input  aria-label="nom" id="name" class="form-control" required />
+                  <input  aria-label=" ecrivez votre nom" id="name" class="form-control" required />
                 </div>
                 <div class="form-group">
                   <label> Adresse email </label>
                   <input
-                  aria-label="adresse email"
+                  aria-label=" ecrivez votre adresse email"
                     id="email"
                     class="form-control"
                     type="email"
@@ -119,7 +119,7 @@
                 <div class="form-group">
                   <label> Comment nous avez-vous connu ? </label>
                   <input
-                  aria-label="comment nous avez-vous connu"
+                  aria-label="comment nous avez-vous connu?"
                     class="form-control"
                     type="email"
                     required
@@ -153,7 +153,7 @@
               </form>
             </div>
             <div class="col-sm-6">
-              <h2 class="h-adaptative">
+              <h2 tabindex="0" class="h-adaptative">
                 contact@lachouetteagence.com<br />2 place Sathonay 69001 Lyon<br />Ouvert
                 de 9h à 18h, du lundi au vendredi<br />
               </h2>
@@ -164,8 +164,8 @@
       <!-- bloc-7 END -->
 
       <!-- ScrollToTop Button -->
-      <a tableindex="0" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"
-        ><span class="fa fa-chevron-up"></span
+      <a  class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"
+        ><span  class="fa fa-chevron-up"></span
       ></a>
       <!-- ScrollToTop Button END-->
     </main>
@@ -176,7 +176,7 @@
       <div class="container bloc-sm">
         <div class="row">
           <div class="col-sm-12">
-            <h3 class=" h-adaptative text-center white">
+            <h3 tabindex="0" class=" h-adaptative text-center white">
               La chouette agence - Agence web basée à Lyon.<br />
             </h3>
             <div class="row row-no-gutters social">
