--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
-    <meta name="robots" content="index">
+    <meta name="robots" content="index" />
     <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
 
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
-
-   
 
     <title>La chouette agence</title>
 
@@ -33,23 +31,22 @@
         <nav class="navbar row">
           <div class="navbar-header">
             <a class="navbar-brand" href="index.html"
-              ><img tabindex="0"
+              ><img
                 src="img/la-chouette-agence.png"
                 alt="La chouette agence"
                 height="40"
             /></a>
             <button
-            aria-expanded="false"
-              role="nav-toggle"
+              aria-expanded="false"
               id="nav-toggle"
               type="button"
               class="ui-navbar-toggle navbar-toggle"
               data-toggle="collapse"
               data-target=".navbar-1"
             >
-              <span   class="sr-only">navigation</span
-              ><span  class="icon-bar"></span><span  class="icon-bar"></span
-              ><span  class="icon-bar"></span>
+              <span class="sr-only">navigation</span
+              ><span class="icon-bar"></span><span class="icon-bar"></span
+              ><span class="icon-bar"></span>
             </button>
           </div>
           <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
@@ -59,7 +56,9 @@
               </li>
               <li></li>
               <li>
-                <a role="button" tabindex="0" href="contact.html">suivant &gt;</a>
+                <a role="button" tabindex="0" href="contact.html"
+                  >suivant &gt;</a
+                >
               </li>
             </ul>
           </div>
@@ -87,7 +86,7 @@
           <div class="row tight-width-whitespace">
             <div class="col-sm-12">
               <img
-              tabindex="0"
+                tabindex="0"
                 src="img/logo.png"
                 class="center-block image-resize-mode"
                 width="100"
@@ -129,8 +128,8 @@
             <div class="col-sm-4">
               <div class="text-center">
                 <span
-                tabindex="0"
-                aria-label="icone de web design"
+                  tabindex="0"
+                  aria-label="icone de web design"
                   class="
                     et-icon-browser
                     sm-shadow
@@ -140,7 +139,9 @@
                   "
                 ></span>
               </div>
-              <p tabindex="0" class="adaptative mg-md text-center">Web design</p>
+              <p tabindex="0" class="adaptative mg-md text-center">
+                Web design
+              </p>
               <p tabindex="0" class="text-center">
                 Que vous ayez un site web qui a besoin d&rsquo;un
                 rafraîchissement ou que vous partiez de zéro, laissez-nous vous
@@ -150,8 +151,8 @@
             <div class="col-sm-4">
               <div class="text-center">
                 <span
-                tabindex="0"
-                aria-label="icone de stratégie"
+                  tabindex="0"
+                  aria-label="icone de stratégie"
                   class="
                     et-icon-presentation
                     sm-shadow
@@ -161,7 +162,9 @@
                   "
                 ></span>
               </div>
-              <p tabindex="0" id="h2" class=" adaptative mg-md text-center">&nbsp;Stratégie</p>
+              <p tabindex="0" id="h2" class="adaptative mg-md text-center">
+                &nbsp;Stratégie
+              </p>
               <p tabindex="0" class="text-center">
                 Plutôt que de suggérer des designs à la mode, nous travaillerons
                 avec vous pour comprendre vos objectifs commerciaux afin de vous
@@ -171,8 +174,8 @@
             <div class="col-sm-4">
               <div class="text-center">
                 <span
-                tabindex="0"
-                aria-label="icone d'illustrations'"
+                  tabindex="0"
+                  aria-label="icone d'illustrations'"
                   class="
                     et-icon-edit
                     sm-shadow
@@ -182,7 +185,10 @@
                   "
                 ></span>
               </div>
-              <p tabindex="0" class=" adaptative mg-md text-center">Illustrations<p>
+              <p tabindex="0" class="adaptative mg-md text-center">
+                Illustrations
+              </p>
+              <p></p>
               <p tabindex="0" class="text-center">
                 Un bon design n'est rien sans de bonnes illustrations. Laissez
                 faire notre équipe de graphistes talentueux pour donner à vos
@@ -236,7 +242,10 @@
                 votre site, n’hésitez pas à nous contacter. Nous travaillerons
                 ensemble pour créer des sites beau et bien structurés, qui
                 seront facilement trouvable sur les moteurs de recherche.
-                <br /><br /><a role="link" aria-label="contactez notre équipe" class="ltc-white bold-link" href="contact.html"
+                <br /><br /><a
+                  aria-label="contactez notre équipe"
+                  class="ltc-white bold-link"
+                  href="contact.html"
                   >Contactez notre équipe</a
                 ><br />
               </p>
@@ -363,7 +372,7 @@
       >
         <div class="container bloc-lg">
           <div class="row">
-            <h3 tabindex="0" class=" adaptative mg-md text-center tc-white">
+            <h3 tabindex="0" class="adaptative mg-md text-center tc-white">
               Prêt pour redonner vie à votre projet ?<br />Contactez notre
               équipe !
             </h3>
@@ -395,32 +404,31 @@
             <div class="row row-no-gutters social">
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a role="link" aria-label="twitter" class="social" class="social" href="index.html"
+                  <a aria-label="twitter" class="social" href="index.html"
                     ><span class="fa fa-twitter icon-md"></span
                   ></a>
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a role="link" aria-label="facebook" class="social" href="index.html"
+                  <a aria-label="facebook" class="social" href="index.html"
                     ><span class="fa fa-facebook icon-md"></span
                   ></a>
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a role="link" aria-label="dribbble" class="social" href="index.html"
+                  <a aria-label="dribbble" class="social" href="index.html"
                     ><span class="fa fa-dribbble icon-md"></span
                   ></a>
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a role="link" aria-label="instagram" class="social" href="index.html"
+                  <a aria-label="instagram" class="social" href="index.html"
                     ><span class="fa fa-instagram icon-md"></span
                   ></a>
                 </div>
-              </div>
               </div>
             </div>
           </div>
@@ -429,9 +437,9 @@
     </footer>
     <!-- Footer - bloc-8 END -->
 
-    <script   src="./js/jquery-2.1.0.js"></script>
-    <script   src="./js/bootstrap.js"></script>
-    <script   src="./js/blocs.js"></script>
-    <script   src="./js/jquery.touchSwipe.js"></script>
+    <script src="./js/jquery-2.1.0.js"></script>
+    <script src="./js/bootstrap.js"></script>
+    <script src="./js/blocs.js"></script>
+    <script src="./js/jquery.touchSwipe.js"></script>
   </body>
 </html>
