augmentation de la taille de la police pour un meilleure visuel et un texte plus lisible, plus accessible à l'oeil

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <p tabindex="0" class="adaptative mg-md text-center">
                 Web design
               </p>
-              <p tabindex="0" class="text-center">
+              <p tabindex="0" class="p-adaptative text-center">
                 Que vous ayez un site web qui a besoin d&rsquo;un
                 rafraîchissement ou que vous partiez de zéro, laissez-nous vous
                 réaliser un design dont vous serez fier.
@@ -165,7 +165,7 @@
               <p tabindex="0" id="h2" class="adaptative mg-md text-center">
                 &nbsp;Stratégie
               </p>
-              <p tabindex="0" class="text-center">
+              <p tabindex="0" class="p-adaptative text-center">
                 Plutôt que de suggérer des designs à la mode, nous travaillerons
                 avec vous pour comprendre vos objectifs commerciaux afin de vous
                 proposer le meilleur design possible.<br />
@@ -189,7 +189,7 @@
                 Illustrations
               </p>
               <p></p>
-              <p tabindex="0" class="text-center">
+              <p tabindex="0" class="p-adaptative text-center">
                 Un bon design n'est rien sans de bonnes illustrations. Laissez
                 faire notre équipe de graphistes talentueux pour donner à vos
                 pages une touche finale d'élégance.
@@ -234,7 +234,7 @@
                 se développer et à connaître le succès. Nous travaillons pour
                 aider les entreprises locales à attirer de nouveaux clients .<br />
               </h2>
-              <p tabindex="0" class="text-center white">
+              <p tabindex="0" class="p-adaptative text-center white">
                 Nous aimons collaborer avec des entrepreneurs créatifs et des
                 entreprises locale, qu’elles aient besoin de créer un site de A
                 à Z ou de donner un coup de jeune à leur site. Que vous ayez
@@ -285,7 +285,7 @@
               <h3 tabindex="0" class="mg-md text-center">
                 Refonte d'un site web pour un journal local
               </h3>
-              <p tabindex="0" class="text-center">
+              <p tabindex="0" class="p-adaptative text-center">
                 Nous avons créé une nouvelle identité visuelle pour un journal
                 lyonnais.
               </p>
@@ -305,7 +305,7 @@
               <h3 tabindex="0" class="mg-md text-center">
                 Création d'un site web pour photographes
               </h3>
-              <p tabindex="0" class="text-center">
+              <p tabindex="0" class="p-adaptative text-center">
                 Nous avons conçu la plateforme idéale pour laisser place aux
                 clichés des photographes.
               </p>
@@ -327,7 +327,7 @@
               <h3 tabindex="0" class="mg-md text-center">
                 Création d'un site internet pour un voyageur
               </h3>
-              <p tabindex="0" class="text-center">
+              <p tabindex="0" class="p-adaptative text-center">
                 Nous avons élaboré un site internet et des illustrations pour
                 sublimer les vidéos et les articles de ce voyageur.
               </p>
@@ -347,7 +347,7 @@
               <h3 tabindex="0" class="mg-md text-center">
                 Conception d'un site pour une agence de mariage
               </h3>
-              <p tabindex="0" class="text-center">
+              <p tabindex="0" class="p-adaptative text-center">
                 Nous avons travaillé avec cette agence pour créer un site
                 internet permettant la présentation détaillée de leurs
                 prestations.
@@ -398,7 +398,7 @@
       <div class="container bloc-sm">
         <div class="row">
           <div class="col-sm-12">
-            <p tabindex="0" class="text-center white">
+            <p tabindex="0" class="p-adaptative text-center white">
               La chouette agence - Agence web basée à Lyon.<br />
             </p>
             <div class="row row-no-gutters social">
