--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,13 @@
               </h1>
               <p
                 tabindex="0"
-                class="text-center mg-lg tc-white tight-width-whitespace"
+                class="
+                  p-adaptative
+                  text-center
+                  mg-lg
+                  tc-white
+                  tight-width-whitespace
+                "
               >
                 Nous sommes ravis que vous souhaitiez collaborer avec notre
                 agence.<br />
@@ -160,7 +166,7 @@
               </form>
             </div>
             <div class="col-sm-6">
-              <h2 tabindex="0" class="h-adaptative">
+              <h2 tabindex="0" class="p-adaptative h-adaptative">
                 contact@lachouetteagence.com<br />2 place Sathonay 69001 Lyon<br />Ouvert
                 de 9h à 18h, du lundi au vendredi<br />
               </h2>
@@ -183,9 +189,9 @@
       <div class="container bloc-sm">
         <div class="row">
           <div class="col-sm-12">
-            <h3 tabindex="0" class="h-adaptative text-center white">
+            <p tabindex="0" class="p-adaptative text-center white">
               La chouette agence - Agence web basée à Lyon.<br />
-            </h3>
+            </p>
             <div class="row row-no-gutters social">
               <div class="col-sm-3">
                 <div class="text-center">
