ajout de semantiques, article

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div>
           </div>
           <div class="row voffset-lg med-width-whitespace">
-            <div class="col-sm-4">
+            <article class="col-sm-4">
               <div class="text-center">
                 <span
                   tabindex="0"
@@ -139,16 +139,16 @@
                   "
                 ></span>
               </div>
-              <p tabindex="0" class="adaptative mg-md text-center">
+              <h2 tabindex="0" class="adaptative mg-md text-center">
                 Web design
-              </p>
+			  </h2>
               <p tabindex="0" class="p-adaptative text-center">
                 Que vous ayez un site web qui a besoin d&rsquo;un
                 rafraîchissement ou que vous partiez de zéro, laissez-nous vous
                 réaliser un design dont vous serez fier.
               </p>
-            </div>
-            <div class="col-sm-4">
+            </article>
+            <article class="col-sm-4">
               <div class="text-center">
                 <span
                   tabindex="0"
@@ -162,16 +162,16 @@
                   "
                 ></span>
               </div>
-              <p tabindex="0" id="h2" class="adaptative mg-md text-center">
+              <h2 tabindex="0" id="h2" class="adaptative mg-md text-center">
                 &nbsp;Stratégie
-              </p>
+			  </h2>
               <p tabindex="0" class="p-adaptative text-center">
                 Plutôt que de suggérer des designs à la mode, nous travaillerons
                 avec vous pour comprendre vos objectifs commerciaux afin de vous
                 proposer le meilleur design possible.<br />
               </p>
-            </div>
-            <div class="col-sm-4">
+            </article>
+            <article class="col-sm-4">
               <div class="text-center">
                 <span
                   tabindex="0"
@@ -185,16 +185,16 @@
                   "
                 ></span>
               </div>
-              <p tabindex="0" class="adaptative mg-md text-center">
+              <h2 tabindex="0" class="adaptative mg-md text-center">
                 Illustrations
-              </p>
+			  </h2>
               <p></p>
               <p tabindex="0" class="p-adaptative text-center">
                 Un bon design n'est rien sans de bonnes illustrations. Laissez
                 faire notre équipe de graphistes talentueux pour donner à vos
                 pages une touche finale d'élégance.
               </p>
-            </div>
+            </article>
           </div>
           <div class="row voffset-lg voffset">
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
