--- a/index.html
+++ b/index.html
@@ -275,12 +275,12 @@
               tabindex="0"
               role="button"
                 href="#"
-                data-lightbox="img/1.jpg"
+                data-lightbox="img/journal.jpg"
                 data-gallery-id="gallery-1"
                 data-caption="Refonte d'un site web pour un journal local"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/1.jpg"
+                  src="img/journal.jpg"
                   alt="refonte site web journal"
                   class="img-responsive portfolio-thumb"
               /></a>
@@ -295,12 +295,12 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/2.jpg"
+                data-lightbox="img/photographe.jpg"
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site web pour photographes"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/2.jpg"
+                  src="img/photographe.jpg"
                   class="img-responsive portfolio-thumb"
                   alt="Création d'un site web pour photographes"
               /></a>
@@ -317,12 +317,12 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/3.jpg"
+                data-lightbox="img/voyageur.jpg"
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site internet pour un voyageur"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/3.jpg"
+                  src="img/voyageur.jpg"
                   class="img-responsive portfolio-thumb"
                   alt="Création d'un site web pour voyageur"
               /></a>
@@ -337,12 +337,12 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/4.jpg"
+                data-lightbox="img/mariage.jpg"
                 data-gallery-id="gallery-1"
                 data-caption="Conception d'un site pour une agence de mariage"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/4.jpg"
+                  src="img/mariage.jpg"
                   class="img-responsive portfolio-thumb"
                   alt="Création d'un site web pour agence de mariage"
               /></a>
