--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,7 @@
       name="description"
       content="La chouette agence est une entreprise de web design basée à lyon, cette page vous permet de nous contacter."
     />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
 
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
@@ -28,10 +25,7 @@
         <nav class="navbar row">
           <div class="navbar-header">
             <a tabindex="0" class="navbar-brand" href="index.html"
-              ><img
-                src="img/la-chouette-agence.png"
-                alt="La chouette agencet"
-                height="40"
+              ><img src="img/la-chouette-agence.png" alt="La chouette agencet" height="40"
             /></a>
             <button
               aria-expanded="false"
@@ -42,8 +36,7 @@
               data-toggle="collapse"
               data-target=".navbar-1"
             >
-              <span class="sr-only">navigation</span
-              ><span class="icon-bar"></span><span class="icon-bar"></span
+              <span class="sr-only">navigation</span><span class="icon-bar"></span><span class="icon-bar"></span
               ><span class="icon-bar"></span>
             </button>
           </div>
@@ -65,37 +58,14 @@
     <!-- Principal conteneur -->
     <main class="page-container">
       <!-- bloc-6 -->
-      <section
-        class="
-          bloc
-          bg-dots-bg bg-repeat
-          bgc-atomic-tangerine
-          d-bloc
-          bloc-bg-texture
-          texture-paper
-        "
-        id="bloc-6"
-      >
+      <section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-12">
-              <h1 tabindex="0" class="text-center hero-bloc-text tc-white">
-                Parlons web design !
-              </h1>
-              <p
-                tabindex="0"
-                class="
-                  p-adaptative
-                  text-center
-                  mg-lg
-                  tc-white
-                  tight-width-whitespace
-                "
-              >
-                Nous sommes ravis que vous souhaitiez collaborer avec notre
-                agence.<br />
-                Parlez-nous de votre projet en complétant le formulaire
-                ci-dessous.
+              <h1 tabindex="0" class="text-center hero-bloc-text tc-white">Parlons web design !</h1>
+              <p tabindex="0" class="p-adaptative text-center mg-lg tc-white tight-width-whitespace">
+                Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br />
+                Parlez-nous de votre projet en complétant le formulaire ci-dessous.
               </p>
             </div>
           </div>
@@ -111,12 +81,7 @@
               <form id="form_1" novalidate>
                 <div class="form-group">
                   <label> Nom </label>
-                  <input
-                    aria-label=" ecrivez votre nom"
-                    id="name"
-                    class="form-control"
-                    required
-                  />
+                  <input aria-label=" ecrivez votre nom" id="name" class="form-control" required />
                 </div>
                 <div class="form-group">
                   <label> Adresse email </label>
@@ -139,9 +104,7 @@
                   />
                 </div>
                 <div class="form-group">
-                  <label>
-                    Brief de votre projet (Ajoutez autant de détails que
-                    nécessaire)<br /> </label
+                  <label> Brief de votre projet (Ajoutez autant de détails que nécessaire)<br /> </label
                   ><textarea
                     aria-label="brief de votre projet"
                     id="message"
@@ -152,13 +115,8 @@
                   ></textarea>
                 </div>
                 <button
-                aria-pressed="false"
-                  class="
-                    bloc-button
-                    btn btn-lg btn-block
-                    cta-hero
-                    btn-atomic-tangerine
-                  "
+                  aria-pressed="false"
+                  class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine"
                   type="submit"
                 >
                   Envoyer
@@ -167,8 +125,8 @@
             </div>
             <div class="col-sm-6">
               <h2 tabindex="0" class="p-adaptative h-adaptative">
-                contact@lachouetteagence.com<br />2 place Sathonay 69001 Lyon<br />Ouvert
-                de 9h à 18h, du lundi au vendredi<br />
+                contact@lachouetteagence.com<br />2 place Sathonay 69001 Lyon<br />Ouvert de 9h à 18h, du lundi au
+                vendredi<br />
               </h2>
             </div>
           </div>
@@ -195,40 +153,28 @@
             <div class="row row-no-gutters social">
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a
-                    aria-label="twitter"
-                    class="social"
-                    href="https://twitter.com"
+                  <a aria-label="twitter" class="social" href="https://twitter.com"
                     ><span class="fa fa-twitter icon-md"></span
                   ></a>
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a
-                    aria-label="facebook"
-                    class="social"
-                    href="https://www.facebook.com"
+                  <a aria-label="facebook" class="social" href="https://www.facebook.com"
                     ><span class="fa fa-facebook icon-md"></span
                   ></a>
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a
-                    aria-label="dribbble"
-                    class="social"
-                    href="https://dribbble.com"
+                  <a aria-label="dribbble" class="social" href="https://dribbble.com"
                     ><span class="fa fa-dribbble icon-md"></span
                   ></a>
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a
-                    aria-label="instagram"
-                    class="social"
-                    href="https://www.instagram.com/?hl=fr"
+                  <a aria-label="instagram" class="social" href="https://www.instagram.com/?hl=fr"
                     ><span class="fa fa-instagram icon-md"></span
                   ></a>
                 </div>
